force-app/main/default/objects/CompetitorPerformanceTrendRange__c/CompetitorPerformanceTrendRange__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Competitor Performance Trend Range</label>
</CustomObject>