force-app/main/default/objects/CompetitorPerformanceTrendRange__c/fields/DOWN_Range__c.field-meta.xml
<CustomField>
    <fullName>DOWN_Range__c</fullName>
    <label>DOWN Range</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>