force-app/main/default/objects/CompetitorPerformanceTrendRange__c/fields/FLAT_Range__c.field-meta.xml
<CustomField>
    <fullName>FLAT_Range__c</fullName>
    <label>FLAT  Range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>