force-app/main/default/objects/CompetitorPerformanceTrendRange__c/fields/UP_Range__c.field-meta.xml
<CustomField>
    <fullName>UP_Range__c</fullName>
    <label>UP Range</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>